<resources>
    <string name="app_name">DAM6</string>
    <string name="tv_username">Username</string>
    <string name="et_username">mail@domain.com</string>
    <string name="tv_password">Password</string>
    <string name="et_password">*****</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="tv_signup">SIgn Up Activity</string>
    <string name="tv_navDrawerTest">Navigation Drawer Test</string>
    <string name="txt_builder">LOGIN</string>
    <string name="txt_builder_success">Successful login</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_error_login">Error login</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tv_repeat_password">Repeat password</string>
</resources>