<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgView_Guitarra"
            android:layout_width="281dp"
            android:layout_height="250dp"
            android:src="@drawable/guitarra"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_username"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_username"

            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_repeat_password"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />


        <Button
            android:id="@+id/btn_register_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_signup"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>